[tool.poetry]
name = "pontos"
version = "24.2.1"
description = "Common utilities and tools maintained by Greenbone Networks"
authors = ["Greenbone AG <info@greenbone.net>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/greenbone/pontos/"
repository = "https://github.com/greenbone/pontos/"
documentation = "https://greenbone.github.io/pontos/"

classifiers = [
  # Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)", # pylint: disable=line-too-long
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
  { include = "pontos" },
  { include = "tests", format = "sdist" },
  { include = "poetry.lock", format = "sdist" },
]
include = ["pontos/updateheader/templates/", "pontos/github/pr_template.md"]

[tool.poetry.dependencies]
python = "^3.9"
colorful = ">=0.5.4"
tomlkit = ">=0.5.11"
packaging = ">=20.3"
httpx = { extras = ["http2"], version = ">=0.23" }
rich = ">=12.4.4"
python-dateutil = ">=2.8.2"
semver = ">=2.13"
lxml = ">=4.9.0"
shtab = ">=1.6.5"

[tool.poetry.group.dev.dependencies]
autohooks = ">=22.7.0"
autohooks-plugin-black = ">=22.7.0"
autohooks-plugin-ruff = ">=23.6.1"
autohooks-plugin-mypy = ">=23.3.0"
rope = ">=1.9.0"
coverage = ">=7.2"
myst-parser = ">=0.19.1"
Sphinx = ">=7.0.1"
furo = ">=2023.5.20"
sphinx-autobuild = ">=2021.3.14"

[tool.black]
line-length = 80
target-version = ['py39', 'py310', 'py311', 'py312']
exclude = '''
/(
    \.git
  | \.venv
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.autohooks]
pre-commit = [
  'autohooks.plugins.black',
  'autohooks.plugins.ruff',
  'autohooks.plugins.mypy',
]
mode = "poetry"

[tool.isort]
profile = "black"
line_length = 80

[tool.ruff]
line-length = 80
target-version = "py39"
extend-select = ["I", "PLE", "PLW"]

[tool.mypy]
files = "pontos"
ignore_missing_imports = true
explicit_package_bases = true
allow_redefinition = true
exclude = 'pontos/updateheader/templates/.*/*\.py'

[[tool.mypy.overrides]]
module = "dateutil"
ignore_missing_imports = true

[tool.pontos.version]
version-module-file = "pontos/version/__version__.py"

[tool.coverage.run]
branch = true
omit = ["tests/*", "pontos/github/scripts/*", "*/__init__.py"]
source = ["pontos"]

[tool.poetry.scripts]
pontos = 'pontos:main'
pontos-version = 'pontos.version:main'
pontos-release = 'pontos.release:main'
pontos-update-header = 'pontos.updateheader:main'
pontos-changelog = 'pontos.changelog:main'
pontos-github = 'pontos.github:main'
pontos-github-actions = 'pontos.github.actions:main'
pontos-github-script = 'pontos.github.script:main'
pontos-nvd-cve = 'pontos.nvd.cve:cve_main'
pontos-nvd-cves = 'pontos.nvd.cve:cves_main'
pontos-nvd-cve-changes = 'pontos.nvd.cve_changes:main'
pontos-nvd-cpe = 'pontos.nvd.cpe:cpe_main'
pontos-nvd-cpes = 'pontos.nvd.cpe:cpes_main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
