[project]
authors = [{ name = "Greenbone AG", email = "info@greenbone.net" }]
name = "pontos"
version = "26.5.1.dev1"
description = "Common utilities and tools maintained by Greenbone AG"
license = "GPL-3.0-or-later"
readme = "README.md"
classifiers = [
  # Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.10,<4.0"
dependencies = [
  "colorful >=0.5.4",
  "tomlkit >=0.5.11",
  "packaging >=20.3",
  "httpx[http2] >=0.23",
  "rich >=12.4.4",
  "python-dateutil >=2.8.2",
  "semver >=2.13",
  "lxml >=4.9.0",
  "shtab >=1.7.0",
]

[project.urls]
homepage = "https://github.com/greenbone/pontos/"
repository = "https://github.com/greenbone/pontos/"
documentation = "https://greenbone.github.io/pontos/"

[project.scripts]
pontos = 'pontos:main'
pontos-version = 'pontos.version:main'
pontos-release = 'pontos.release:main'
pontos-update-header = 'pontos.updateheader:main'
pontos-changelog = 'pontos.changelog:main'
pontos-github = 'pontos.github:main'
pontos-github-actions = 'pontos.github.actions:main'
pontos-github-script = 'pontos.github.script:main'
pontos-nvd-cve = 'pontos.nvd.cve:cve_main'
pontos-nvd-cves = 'pontos.nvd.cve:cves_main'
pontos-nvd-cve-changes = 'pontos.nvd.cve_changes:main'
pontos-nvd-cpe = 'pontos.nvd.cpe:cpe_main'
pontos-nvd-cpes = 'pontos.nvd.cpe:cpes_main'
pontos-nvd-cpe-match = 'pontos.nvd.cpe_matches:cpe_match_main'
pontos-nvd-cpe-matches = 'pontos.nvd.cpe_matches:cpe_matches_main'
pontos-nvd-sources = 'pontos.nvd.source:main'

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  { include = "pontos" },
  { include = "tests", format = "sdist" },
  { include = "poetry.lock", format = "sdist" },
]
include = ["pontos/updateheader/templates/", "pontos/github/pr_template.md"]

[tool.poetry.group.dev.dependencies]
autohooks-plugin-ruff = ">=23.6.1"
autohooks-plugin-mypy = ">=23.3.0"
rope = ">=1.9.0"
coverage = ">=7.14.3"
myst-parser = ">=0.19.1"
Sphinx = ">=7.0.1"
furo = ">=2023.5.20"
sphinx-autobuild = ">=2021.3.14"
git-cliff = "^2.13.1"

[tool.autohooks]
pre-commit = [
  'autohooks.plugins.ruff.check',
  'autohooks.plugins.ruff.format',
  'autohooks.plugins.mypy',
]
mode = "poetry"

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "PLE", "PLW", "PTH", "C4", "A", "N", "RUF", "UP"]

[tool.mypy]
files = "pontos"
ignore_missing_imports = true
explicit_package_bases = true
allow_redefinition = true
exclude = 'pontos/updateheader/templates/.*/*\.py'

[[tool.mypy.overrides]]
module = "dateutil"
ignore_missing_imports = true

[tool.pontos.version]
version-module-file = "pontos/version/__version__.py"

[tool.coverage.run]
branch = true
omit = ["tests/*", "pontos/github/scripts/*", "*/__init__.py"]
source = ["pontos"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.git-cliff.changelog]
# template for the changelog header
header = """
# Changelog\n
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Calendar Versioning](https://calver.org/).\n
"""
# template for the changelog body
# https://keats.github.io/tera/docs/#introduction
body = """
{%- macro remote_url() -%}
  https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}
{%- endmacro -%}

{% if version -%}
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else -%}
    ## [Unreleased]
{% endif -%}

{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | upper_first }}
    {% for commit in commits %}
        - {{ commit.message | split(pat="\n") | first | upper_first | trim }}\
            {% if commit.remote.username %} by [@{{ commit.remote.username }}](https://github.com/{{ commit.remote.username }}){%- endif -%}
            {% if commit.remote.pr_number %} in \
            [#{{ commit.remote.pr_number }}]({{ self::remote_url() }}/pull/{{ commit.remote.pr_number }}) \
            {% elif commit.id %} in \
            [{{ commit.id | truncate(length=7, end="") }}]({{ self::remote_url() }}/commit/{{ commit.id }})\
            {%- endif -%}
    {% endfor %}
{% endfor -%}
"""
# template for the changelog footer
footer = """
{%- macro remote_url() -%}
  https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}
{%- endmacro -%}

{% for release in releases %}
    {% if release.version -%}
        {% if release.previous.version -%}
            [{{ release.version | trim_start_matches(pat="v") }}]: \
                {{ self::remote_url() }}/compare/{{ release.previous.version }}..{{ release.version }}
        {% endif -%}
    {% else -%}
        [unreleased]: {{ self::remote_url() }}/compare/{{ release.previous.version }}..HEAD
    {% endif -%}
{%- endfor -%}
"""
# remove the leading and trailing whitespace from the templates
trim = true

[tool.git-cliff.git]
# parse the commits based on https://www.conventionalcommits.org
conventional_commits = true
# filter out the commits that are not following the conventional commits format
filter_unconventional = false
# process each line of a commit as an individual commit
split_commits = false
# regex for preprocessing the commit messages
commit_preprocessors = [
  # remove issue numbers from commits
  { pattern = '\((\w+\s)?#([0-9]+)\)', replace = "" },
]
# regex for parsing and grouping commits
commit_parsers = [
  { message = "^[a|A]dd", group = "<!-- 1 -->:sparkles: Added" },
  { message = "^[c|C]hange", group = "<!-- 2 -->:construction_worker: Changed" },
  { message = "^[f|F]ix", group = "<!-- 3 -->:bug: Bug Fixes" },
  { message = "^[r|R]emove", group = "<!-- 4 -->:fire: Removed" },
  { message = "^[d|D]rop", group = "<!-- 4 -->:fire: Removed" },
  { message = "^[d|D]oc", group = "<!-- 5 -->:books: Documentation" },
  { message = "^[t|T]est", group = "<!-- 6 -->:white_check_mark: Testing" },
  { message = "^[c|C]hore", group = "<!-- 7 -->:wrench: Miscellaneous" },
  { message = "^[c|C]i", group = "<!-- 7 -->:wrench: Miscellaneous" },
  { message = "^[m|M]isc", group = "<!-- 7 -->:wrench: Miscellaneous" },
  { message = "^[d|D]eps", group = "<!-- 8 -->:ship: Dependencies" },
]
# filter out the commits that are not matched by commit parsers
filter_commits = true
# sort the tags topologically
topo_order = false
# sort the commits inside sections by oldest/newest order
sort_commits = "oldest"
